--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
+
+.countrylist {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 20px;
+}
+
+
+.countryitem {
+  width: 300px;
+  border: 1px solid brown;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.countryflag {
+  width: 50px;
+  height: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.countryflagDetails {
+  width: 30px;
+  height: 30px;
+}
+.countrysearch{
+ width: 100%;
+ padding: 10px;
+ margin-bottom: 20px;
+ border: 1px solid brown;
+ border-radius: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.viewmorebtn {
+  margin-top: 10px;
+  padding: 5px, 10px;
+  background-color: antiquewhite;
+  color: black;
+  border-radius: 4px;
+  border: none;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.countrydetails {
+  margin-top: 10px;
+  text-align: center;
 }
